# Gimme-iPhotos

./: .bootstrap.mk  .dockerignore  .gitignore  .release  Dockerfile  LICENSE  Makefile  README.md  Taskfile.yml  lefthook.yml  pyproject.toml  test.cfg
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml  docker.yml  python.yml
.vim/: coc-settings.json
gimme_iphotos/: __init__.py  downloader.py  utils.py
src/: downloader.py  main.py  utils.py
